--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,40 @@
   object-fit: cover;
 }
 
-#star{
+#star {
   width: 80%;
+}
+
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.588);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popupInner {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 4px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  position: relative;
+}
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  border: none;
+  background-color: transparent;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+#threeDot {
+  cursor: pointer;
 }
