--- a/src/components/style/FoodPageStyle/DominosStyle/DominosTopSectionStyle.scss
+++ b/src/components/style/FoodPageStyle/DominosStyle/DominosTopSectionStyle.scss
@@ -38,5 +38,73 @@
       }
     }
   }
+  .DominosSeletedItemBody {
+    text-align: center;
+    .dominosSeletedItemData {
+      display: inline-flex;
+      justify-content: space-around;
+      justify-content: space-between;
+    }
+  }
+  .DominosSeletedItemBody {
+    margin-top: 2%;
+    .insertAndEditBtn {
+      text-align: end;
+      width: 80%;
+      margin-left: 10%;
+      margin-right: 10%;
+      button {
+        width: 10%;
+        margin: 0% 2% 0% 2%;
+        height: 30px;
+      }
+    }
+    .sendData {
+      margin-top: 2%;
+      form {
+        max-width: 50%;
+        margin-left: 25%;
+        margin-right: 25%;
+        border: 2px solid black;
+        .formData {
+          display: grid;
+          grid-template-columns: 50% 50%;
+          span {
+            text-align: start;
+            label {
+              margin-left: 5%;
+            }
+            input {
+              width: 70%;
+              margin-left: 15%;
+              margin-right: 15%;
+              margin-top: 1%;
+            }
+            textarea {
+              width: 70%;
+              margin-left: 15%;
+              margin-right: 15%;
+              margin-top: 1%;
+            }
+            margin-top: 5%;
+          }
+        }
+        button {
+          margin: 0% 5% 0% 5%;
+          margin-top: 4%;
+          margin-bottom: 2%;
+          width: 20%;
+          height: 30px;
+          text-align: center;
+          font-size: medium;
+        }
+      }
+    }
+  }
+  .SelectedFileDiv {
+    max-width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 5%;
+  }
 }
-  
