--- a/src/components/style/navbar.scss
+++ b/src/components/style/navbar.scss
@@ -8,13 +8,18 @@
     margin-right: 10%;
     .upperBody {
       display: grid;
+      grid-template-columns: 10% 90%;
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+    .responviseDiv {
+      display: grid;
       grid-template-columns: 90% 10%;
     }
     .liftSide {
       display: inline-flex;
-      img {
-        width: 15%;
-      }
 
       .navbarLocation {
         margin-left: 2%;
@@ -76,6 +81,24 @@
         height: 40px;
         border-radius: 20px;
         border-color: black;
+      }
+    }
+  }
+}
+@media (max-width: 860px) {
+  .navbarOutterBody {
+    .upperBody {
+      
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    .line3 {
+      text-align: end;
+      #responsiveIcon {
+        margin: 0% 2% 0% 2%;
       }
     }
   }
