--- a/src/components/style/orderFood.scss
+++ b/src/components/style/orderFood.scss
@@ -1,6 +1,6 @@
 .orderFoodoutter {
-  width: 100%;
-  height: min-content;
+  background-size: cover;
+  background-position: center;
   background-image: url(../img/orderBgImg.jpg);
   .orderFoodInner {
     max-width: 80%;
@@ -8,27 +8,86 @@
     margin-right: 10%;
     margin-top: 5%;
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 60% 40%;
+    @media (max-width: 860px) {
+      grid-template-columns: 100%;
+    }
     .orderFoodText {
-      text-align: center;
-      margin-top: 30%;
+      text-align: start;
+      margin-top: 15%;
+      margin-bottom: 15%;
+      width: 60%;
+      margin-left: 25%;
+      margin-right: 15%;
+      @media (max-width: 860px) {
+        margin-top: 5%;
+        margin-bottom: 0%;
+        margin-left: 15%;
+        width: 70%;
+        margin-right: 15%;
+        text-align: center;
+      }
+      h1{
+        color: white;
+      }
+      p{
+        margin-top: 2%;
+        color: #577494
+        ;
+      }
       .orderFoodBtn {
-        display: grid;
-        grid-template-columns: 50% 50%;
+        display: inline-flex;
+        text-align: center;
         button {
           display: grid;
-          grid-template-columns: 30% 70%;
-          width: 50%;
+          text-align: start;
+          grid-template-columns: 20% 80%;
+          width: 40%;
+          margin: 3% 0%;
+          justify-content: center;
+          background-color: #2b3445;
+          border-radius: 10px;
+          cursor: pointer;
+          span{
+            width: 80%;
+            margin-left: 15%;
+            margin-right: 5%;
+          }
+          h3{
+            color: white;
+          }
+          @media (max-width:860px) {
+            width: 50%;
+            margin: 3%;
+          }
+          #downloadBtnicon {
+            text-align: center;
+            width: 60%;
+            height: 100%;
+            margin-left: 60%;
+            color: white;
+          }
+        }
+        #downloadBtn{
+          margin-left: 5%;
         }
       }
     }
-
     .orderFoodImg {
       text-align: center;
+      margin-top: 2%;
+      @media (max-width: 860px) {
+        margin-top: 5%;
+      }
       img {
-        margin-top: 3%;
-        width: 50%;
-        margin-bottom: 0%;
+        width: 60%;
+        height: 100%;
+        float: right;
+        margin-left: 25%;
+        margin-right: 25%;
+        @media (max-width: 860px) {
+          width: 50%;
+        }
       }
     }
   }
