--- a/src/App.css
+++ b/src/App.css
@@ -62,3 +62,12 @@
 #threeDot {
   cursor: pointer;
 }
+
+#downloadBtnicon {
+  width: 30px;
+  height: 100%;
+}
+#GoogledownloadBtnicon {
+  width: 30px;
+  height: 100%;
+}
