--- a/src/components/style/LandingPageStyle/searchStyle.scss
+++ b/src/components/style/LandingPageStyle/searchStyle.scss
@@ -4,18 +4,37 @@
     display: grid;
     grid-template-columns: 90% 10%;
     text-align: center;
-    border: 1px solid black;
-    border-radius: 0px 25px 25px 0px;
     input {
       height: 50px;
       font-size: large;
+      // border: 1px solid black;
+      background-color: rgb(228, 228, 228);
+      border-radius: 25px 0px 0px 25px;
+      text-align: center;
+      border: none;
     }
+    // input[type="search"]::placeholder {
+    //   text-align: center;
+    // }
+    // input[type="search"]:-ms-input-placeholder {
+    //   text-align: center;
+    // }
     button {
       width: 100%;
       height: 100%;
-      border-radius: 0px 25px 25px 0px;
       cursor: pointer;
+      // border-radius: 0px;
+      // border: 1px solid black;
+      border-radius: 0px 25px 25px 0px;
+      border: none;
+      background-color: rgb(228, 228, 228);
+
     }
+    // button:hover {
+    //   transition: 1s;
+    //   border-radius: 0px 25px 25px 0px;
+    // }
+
     #icon {
       width: 100%;
       height: 30px;
