all CRUD operation is completed as well as food page Operation

--- a/src/components/style/FoodPageStyle/DominosStyle/DominosPizzaStyle.scss
+++ b/src/components/style/FoodPageStyle/DominosStyle/DominosPizzaStyle.scss
@@ -4,6 +4,10 @@
   grid-template-columns: 30% 30% 30%;
   justify-content: space-around;
   justify-content: space-between;
+  max-width: 80%;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-top: 5%;
 
   .dominosSeletedItemData {
     margin-bottom: 5%;
