--- a/src/components/style/FoodPageStyle/DominosStyle/DominosTopSectionStyle.scss
+++ b/src/components/style/FoodPageStyle/DominosStyle/DominosTopSectionStyle.scss
@@ -30,11 +30,18 @@
     .DominosUpperAndSearchBarInnerBody {
       border: 1px solid black;
       background-color: white;
+      color: black;
+
       ul li {
         display: inline-flex;
         justify-content: space-around;
         justify-content: space-between;
         margin: 2%;
+        #DominosTopSectionA{
+          color: black;
+          font-weight:bold;
+          
+        }
       }
     }
   }
@@ -71,6 +78,7 @@
           grid-template-columns: 50% 50%;
           span {
             text-align: start;
+
             label {
               margin-left: 5%;
             }
