--- a/src/components/style/topSection.scss
+++ b/src/components/style/topSection.scss
@@ -34,6 +34,18 @@
           background-color: rgb(198, 49, 49);
           margin-top: 1%;
         }
+
+        @media (max-width: 520px) {
+          button {
+            width: 50%;
+            margin-top: 5%;
+          }
+          h1{
+            margin-top: 3%;
+            font-size: 25px;
+          }
+        }
+
         button:hover {
           background-color: white;
           color: rgb(198, 49, 49);
