--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,14 @@
   padding: 0%;
   box-sizing: border-box;
 }
+/* #root{
+  background-color: white;
+} */
 
 .swiper {
   width: 100%;
   height: 100%;
+  box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.2);
 }
 
 .swiper-slide {
@@ -70,4 +74,7 @@
 #GoogledownloadBtnicon {
   width: 30px;
   height: 100%;
+}
+.swiper-pagination {
+  /* display: none; */
 }
