--- a/src/components/style/FoodPageStyle/DominosStyle/DominosPizzaStyle.scss
+++ b/src/components/style/FoodPageStyle/DominosStyle/DominosPizzaStyle.scss
@@ -1,23 +1,25 @@
 .dominosSeletedItemDataBody {
   text-align: center;
   display: grid;
-  grid-template-columns: 30% 30% 30%;
+  grid-template-columns: 22.75% 22.75% 22.75% 22.75%;
   justify-content: space-around;
   justify-content: space-between;
   max-width: 80%;
   margin-left: 10%;
   margin-right: 10%;
   margin-top: 5%;
+  grid-gap: 3%;
 
   .dominosSeletedItemData {
     margin-bottom: 5%;
-    border: 2px solid black;
-
+    box-shadow: 0 4px 0px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    width: 100%;
     .dominosSeletedItemDataInnerBody {
       text-align: start;
-      max-width: 90%;
-      margin-left: 5%;
-      margin-right: 5%;
+      max-width: 100%;
+      // margin-left: 5%;
+      // margin-right: 5%;
 
       .menuDiv {
         text-align: end;
@@ -30,39 +32,114 @@
       }
       img {
         width: 100%;
+        object-fit: cover;
       }
       h1 {
+        margin-top: 2%;
+        margin-bottom: 1%;
+        margin-left: 5%;
+        font-size: 20px;
+        color: gray;
+        cursor: pointer;
+        font-family: "Lora", serif;
+      }
+      h1:hover {
+        color: red;
+      }
+      p {
+        margin-left: 7%;
         margin-bottom: 2%;
+        font-size: 18px;
+        font-family: "Yanone Kaffeesatz", sans-serif;
       }
       .itemSize {
         margin-top: 2%;
+        margin-left: 5%;
+
         button {
           width: 25%;
           height: 22px;
           margin: 0% 2% 0% 2%;
+          cursor: pointer;
         }
       }
       .itemHight {
         margin-top: 2%;
+        margin-left: 5%;
+
         button {
           width: 25%;
           height: 22px;
           margin: 0% 2% 0% 2%;
+          cursor: pointer;
         }
       }
       .itemPriceAndAddBtn {
-        margin-top: 3%;
+        margin-top: 5%;
         margin-bottom: 3%;
+        max-width: 90%;
+        margin-left: 5%;
+        margin-right: 5%;
+
         display: grid;
         grid-template-columns: 50% 50%;
         .buyNowBtn {
           text-align: end;
           button {
+            width: 50%;
+            height: 22px;
+          }
+        }
+        h5 {
+          font-size: 16px;
+          margin-left: 5%;
+          color: rgb(4, 4, 112);
+        }
+      }
+    }
+  }
+}
+.dominosSeletedItemData:hover{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+
+}
+@media (max-width: 860px) {
+  .dominosSeletedItemDataBody {
+    grid-template-columns: 30% 30% 30%;
+    grid-gap: 3%;
+    max-width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+    .dominosSeletedItemData {
+      .dominosSeletedItemDataInnerBody {
+        .itemSize {
+          button {
+            width: 30%;
+            height: 22px;
+            margin: 0% 0% 0% 2%;
+
+            cursor: pointer;
+            font-size: 12px;
+          }
+        }
+        .itemHight {
+          button {
             width: 40%;
             height: 22px;
+            margin: 0% 0% 0% 2%;
+
+            cursor: pointer;
+            font-size: 12px;
           }
         }
       }
     }
+  }
+}
+@media (max-width: 520px) {
+  .dominosSeletedItemDataBody {
+    grid-template-columns: 45% 45%;
+    grid-gap: 5%;
+    margin-bottom: 50%;
   }
 }
