--- a/src/components/style/LandingPageStyle/searchStyle.scss
+++ b/src/components/style/LandingPageStyle/searchStyle.scss
@@ -28,7 +28,6 @@
       border-radius: 0px 25px 25px 0px;
       border: none;
       background-color: rgb(228, 228, 228);
-
     }
     // button:hover {
     //   transition: 1s;
@@ -40,5 +39,18 @@
       height: 30px;
       margin-top: 4%;
     }
+    @media (max-width: 520px) {
+      #icon {
+        width: 90%;
+        height: 25px;
+        margin-top: 4%;
+        margin-right: 20%;
+      }
+    }
+  }
+}
+@media (max-width: 520px) {
+  .search {
+    margin-top: 5%;
   }
 }
