--- a/src/components/style/foodSelectorCard.scss
+++ b/src/components/style/foodSelectorCard.scss
@@ -29,9 +29,20 @@
       width: 100%;
       text-align: center;
     }
+    @media (max-width: 520px) {
+      .foodCardsItem {
+        margin-top: 10%;
+        .responvisefoodCardsItem {
+          h2 {
+            font-size: 17px;
+          }
+        }
+      }
+    }
     .foodCardsItem {
       margin-bottom: 10%;
       width: 100%;
+
       .responvisefoodCardsItem {
         width: 80%;
         margin-left: 10%;
