--- a/src/components/style/orderFood.scss
+++ b/src/components/style/orderFood.scss
@@ -22,18 +22,28 @@
       @media (max-width: 860px) {
         margin-top: 5%;
         margin-bottom: 0%;
-        margin-left: 15%;
-        width: 70%;
-        margin-right: 15%;
+        // margin-left: 15%;
+        width: 90%;
+        margin-left: 5%;
+        margin-right: 5%;
+        // margin-right: 15%;
         text-align: center;
       }
-      h1{
+      @media (max-width: 520px) {
+        // width: 90%;
+        // margin-left: 5%;
+        // margin-right: 5%;
+      }
+      h1 {
         color: white;
       }
-      p{
+      p {
         margin-top: 2%;
-        color: #577494
-        ;
+        color: #577494;
+        @media (max-width: 520px) {
+          font-size: 15px;
+          font-weight: 700;
+        }
       }
       .orderFoodBtn {
         display: inline-flex;
@@ -48,15 +58,15 @@
           background-color: #2b3445;
           border-radius: 10px;
           cursor: pointer;
-          span{
+          span {
             width: 80%;
             margin-left: 15%;
             margin-right: 5%;
           }
-          h3{
+          h3 {
             color: white;
           }
-          @media (max-width:860px) {
+          @media (max-width: 860px) {
             width: 50%;
             margin: 3%;
           }
@@ -67,8 +77,19 @@
             margin-left: 60%;
             color: white;
           }
+          @media (max-width: 600px) {
+            height: max-content;
+            p {
+               margin-top: 5%;
+              font-size: 11px;
+              margin-bottom: 5%;
+            }
+            h3{
+              margin-bottom: 5%;
+            }
+          }
         }
-        #downloadBtn{
+        #downloadBtn {
           margin-left: 5%;
         }
       }
