--- a/src/components/style/foodSelectorCard.scss
+++ b/src/components/style/foodSelectorCard.scss
@@ -59,7 +59,10 @@
           color: #33373e;
           margin-top: 2%;
           margin-bottom: 4%;
+        }:hover{
+          color: black;
         }
+        
       }
     }
   }
