--- a/src/components/style/FoodPageStyle/DominosStyle/DominosTopSectionStyle.scss
+++ b/src/components/style/FoodPageStyle/DominosStyle/DominosTopSectionStyle.scss
@@ -87,7 +87,7 @@
             color: black;
             font-weight: bold;
           }
-          #DominosTopSectionA:hover{
+          #DominosTopSectionA:hover {
             color: red;
           }
         }
@@ -133,6 +133,16 @@
         margin-left: 25%;
         margin-right: 25%;
         border: 2px solid black;
+        @media (max-width: 860px) {
+          max-width: 70%;
+          margin-left: 15%;
+          margin-right: 15%;
+        }
+        @media (max-width: 520px) {
+          max-width: 80%;
+          margin-left: 10%;
+          margin-right: 10%;
+        }
         .formData {
           display: grid;
           grid-template-columns: 50% 50%;
